--- a/bible-school-on-wheels.html
+++ b/bible-school-on-wheels.html
@@ -20,7 +20,7 @@
     </div>
   </header>
 
-  <main class="container">
+  <main class="container">git 
     <section class="card">
       <h2>About Bible School on Wheels</h2>
       <p>Our mobile Bible School brings discipleship, leadership training and career development directly to local communities over a structured three-year curriculum.</p>
@@ -30,19 +30,25 @@
       <h3>Bible School On Wheels 1 — Foundations</h3>
       <div class="grid">
         <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Introduction to Biblical Discipleship" />
           <h4>Introduction to Biblical Discipleship</h4>
           <p>Foundational teaching on following Jesus and discipling others.</p>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" target="_blank">Register</a>
+          <a class="btn" href="courses/introduction-to-biblical-discipleship.html">View course</a>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
         </div>
         <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Scripture and Interpretation" />
           <h4>Scripture & Interpretation</h4>
           <p>Basics of reading and applying Scripture.</p>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" target="_blank">Register</a>
+          <a class="btn" href="courses/scripture-and-interpretation.html">View course</a>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
         </div>
         <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Personal Spiritual Formation" />
           <h4>Personal Spiritual Formation</h4>
           <p>Practices for spiritual growth and character formation.</p>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" target="_blank">Register</a>
+          <a class="btn" href="courses/personal-spiritual-formation.html">View course</a>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
         </div>
       </div>
     </section>
@@ -51,19 +57,25 @@
       <h3>Bible School On Wheels 2 — Leadership & Service</h3>
       <div class="grid">
         <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Leadership Principles" />
           <h4>Leadership Principles</h4>
           <p>Leadership values and practical skills for church and community.</p>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" target="_blank">Register</a>
+          <a class="btn" href="courses/leadership-principles.html">View course</a>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
         </div>
         <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Community Project Design" />
           <h4>Community Project Design</h4>
           <p>Planning and running community impact projects.</p>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" target="_blank">Register</a>
+          <a class="btn" href="courses/community-project-design.html">View course</a>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
         </div>
         <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Pastoral Care and Counseling" />
           <h4>Pastoral Care & Counseling</h4>
           <p>Basics of caring for people in pastoral and community settings.</p>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" target="_blank">Register</a>
+          <a class="btn" href="courses/pastoral-care-and-counseling.html">View course</a>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
         </div>
       </div>
     </section>
@@ -72,19 +84,25 @@
       <h3>Bible School On Wheels 3 — Career & Deployment</h3>
       <div class="grid">
         <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Marketplace Calling" />
           <h4>Marketplace Calling</h4>
           <p>Integrating faith and vocation in the workplace.</p>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" target="_blank">Register</a>
+          <a class="btn" href="courses/marketplace-calling.html">View course</a>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
         </div>
         <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Leadership Practicum" />
           <h4>Leadership Practicum</h4>
           <p>Practical placement and mentorship for emerging leaders.</p>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" target="_blank">Register</a>
+          <a class="btn" href="courses/leadership-practicum.html">View course</a>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
         </div>
         <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Capstone and Commissioning" />
           <h4>Capstone & Commissioning</h4>
           <p>Final project, assessment and commissioning service.</p>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" target="_blank">Register</a>
+          <a class="btn" href="courses/capstone-and-commissioning.html">View course</a>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
         </div>
       </div>
     </section>
