--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="description" content="Teach Nations: a global Bible school and movement transforming nations through discipleship, leadership training and career development.">
 </head>
 <body>
-  <header class="site-header">
+  <a class="skip-link" href="#main">Skip to main content</a>
+  <header class="site-header" role="banner">
     <div class="container">
       <h1 class="logo">Teach Nations</h1>
       <nav>
@@ -35,10 +36,66 @@
     </div>
   </section>
 
-  <main class="container">
+  <main id="main" class="container" role="main">
     <section id="about" class="card">
       <h3>About Teach Nations</h3>
-      <p>Teach Nations is a global Bible school with a mandate to transform nations by equipping leaders through discipleship, leadership training and career development programs. We run accessible online courses, host transformational conferences, and foster thriving communities that impact society.</p>
+      <p>Teach Nations is a Christ-centered initiative dedicated to discipleship, career development, and leadership training for emerging and established leaders across the world. Through Teach Every Nation (TEN), we deliver biblical, transformational, and practical courses that equip leaders, students, and pastors to live out their faith with excellence and purpose.</p>
+      <p>Our mission is to raise a generation of believers who are spiritually grounded, professionally competent, and socially responsible leaders who transform their communities through knowledge, integrity, and service.</p>
+    </section>
+
+    <section id="focus" class="card">
+      <h3>Our Focus Areas</h3>
+      <div class="focus-list">
+        <h4>1. Bible School on Wheels (BSOW)</h4>
+        <p>The Bible School on Wheels is our foundational discipleship and leadership training platform. It offers a structured pathway for leaders, pastors, and students to study and grow in their faith through biblically grounded and practical courses delivered through online communities, local training centers, and church-based hubs.</p>
+        <p>Sample BSOW courses:</p>
+        <ul>
+          <li>Survey of the Bible</li>
+          <li>Forgiveness: 70x7</li>
+          <li>What on Earth is God Doing in My Life?</li>
+          <li>Double Your Productivity</li>
+        </ul>
+
+        <h4>2. Schools Discipleship Programs</h4>
+        <p>We shape the next generation through faith-based education and mentorship. Teach Nations runs Schools Discipleship Programs across multiple countries in partnership with organisations like Scripture Union, empowering teachers, chaplains, and high school students to live out their faith with conviction and compassion.</p>
+        <ul>
+          <li>Training and mentoring school patrons and deans to lead Bible study groups.</li>
+          <li>Providing biblical materials and leadership courses tailored for students.</li>
+          <li>Offering career guidance and mentorship sessions to help students discover their calling.</li>
+        </ul>
+
+        <h4>3. Community Development Programs (Good Works)</h4>
+        <p>We believe faith is demonstrated through action. Our Community Development Programs extend Christ’s love beyond classrooms into everyday life through educational support, health care visits, support for vulnerable mothers, and livelihood projects.</p>
+        <ul>
+          <li>Educational Support: providing school supplies and learning materials.</li>
+          <li>Health Care & Compassion Visits: weekly hospital visits for mothers and children.</li>
+          <li>Support for Mothers: care and material assistance for vulnerable mothers in Kyebando and nearby communities.</li>
+          <li>Community Empowerment Projects: outreach and livelihood initiatives that promote dignity and hope.</li>
+        </ul>
+
+        <div class="fund-note">
+          <strong>TEN Fund (2025)</strong>
+          <p>In 2025 we launched the TEN Fund — a student-led initiative to sponsor 100 children in school each term with a contribution of UGX 100,000 per child. This program is fully driven by Teach Nations students and reflects our heart for generosity and sustainable community transformation.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="commitment" class="card">
+      <h3>Our Commitment</h3>
+      <p>Teach Nations exists to build a global movement of biblically grounded, purpose-driven, and socially responsible leaders. Through our Bible schools, discipleship programs, and community outreaches, we demonstrate the love of Christ in word and deed—transforming individuals, schools, and communities across nations.</p>
+    </section>
+
+    <section id="team" class="card">
+      <h3>Our Team</h3>
+      <div class="team-grid">
+        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Brian Mucyo"/><h4>Brian Mucyo</h4><p class="role">Executive Director</p><p>Provides overall vision, leadership, and strategic direction for Teach Nations.</p></div>
+        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Anthony Bugembe"/><h4>Anthony Bugembe</h4><p class="role">Director of Programs</p><p>Oversees program implementation, curriculum, and training across all focus areas.</p></div>
+        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Edmond Kyanzi"/><h4>Edmond Kyanzi</h4><p class="role">Dean of Students</p><p>Leads academic coordination, student discipleship, and performance evaluation.</p></div>
+        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Agnes Naluwagga"/><h4>Agnes Naluwagga</h4><p class="role">Programs Coordinator – Schools</p><p>Manages school-based programs and partnerships with Scripture Union.</p></div>
+        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Sarah Sanyu"/><h4>Sarah Sanyu</h4><p class="role">Programs Coordinator – Community</p><p>Leads community outreach and 'Good Works' initiatives.</p></div>
+        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Patricia Kyomugisha"/><h4>Patricia Kyomugisha</h4><p class="role">Head of Administration & Finance</p><p>Oversees financial management, logistics, and operational systems.</p></div>
+        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Alex Catherine Nagawa"/><h4>Alex Catherine Nagawa</h4><p class="role">Communications Manager</p><p>Manages internal and external communications, media, and partnerships.</p></div>
+      </div>
     </section>
 
     <section id="courses" class="grid">
@@ -72,12 +129,13 @@
       <a class="btn" href="#">Get involved</a>
     </section>
 
-    <section id="register" class="card">
-      <h3>Register for the Bible School</h3>
-      <p class="register-note">Complete the short registration form below to enroll as a student.</p>
+    <section id="register" class="card" aria-labelledby="register-heading">
+      <h3 id="register-heading">Register for the Bible School</h3>
+      <p class="register-note">Complete the short registration form below to enroll as a student. If embedding is blocked by your browser, use the button to open the form in a new tab.</p>
       <div class="iframe-wrap">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0" title="Teach Nations registration form">Loading…</iframe>
       </div>
+      <p style="margin-top:.75rem"><a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Open registration form in a new tab</a></p>
     </section>
 
     <section id="contact" class="card contact">
